# agent-self-organized-criticality

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  citation.bib  pyproject.toml  requirements.txt
docs/: ARTIFACT.md
experiments/wave2a/: lib
experiments/wave2a/exp_10_1/: run.py
experiments/wave2a/exp_10_2/: run.py
experiments/wave2a/exp_1_1/: run.py
experiments/wave2a/exp_4_1/: run.py
experiments/wave2a/exp_6_1/: run.py
experiments/wave2a/exp_7_1/: run.py
experiments/wave2a/exp_7_2/: run.py
experiments/wave2b/: lib
experiments/wave2b/exp_11_2/: run.py
experiments/wave2b/exp_1_2/: run.py
experiments/wave2b/exp_2_2/: run.py
experiments/wave2b/exp_3_1/: run.py
experiments/wave2b/exp_5_1/: run.py
experiments/wave2b/exp_5_2/: run.py
experiments/wave2b/exp_9_1/: run.py
experiments/wave2b/exp_9_2/: run.py
experiments/wave2c/: lib
experiments/wave2c/alfworld_pilot/: run.py
experiments/wave2c/exp_11_1/: run.py
experiments/wave2c/exp_2_1/: run.py
experiments/wave2c/exp_3_2/: run.py
experiments/wave2c/exp_4_2/: run.py
experiments/wave2c/exp_6_2/: run.py
lib/wave2a/: __init__.py  azure_client.py  gameoflife.py  metrics.py  pipeline.py  sp_runner.py  statefulpuzzle.py
lib/wave2b/: __init__.py  azure_client.py  pipeline.py  taubench_extractor.py  taubench_judges.py  taubench_runner.py  tb_runner.py
lib/wave2c/: __init__.py  alfworld_batch_runner.py  alfworld_extractor.py  alfworld_judges.py  alfworld_pipeline.py  alfworld_runner.py  azure_client.py  gaia_runner.py  hotpotqa_runner.py
(+2 files in other folders)
