[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsocworld"
version = "0.1.0"
description = "Experiment code for self-organized criticality in long-horizon agents."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Anonymous Authors"}]
keywords = [
  "long-horizon agents",
  "self-organized criticality",
  "agent evaluation",
  "world models",
]
dependencies = [
  "openai>=1.0.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "datasets>=2.14",
  "alfworld>=0.3.3",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/YOUR_ORG/YOUR_REPO"
Repository = "https://github.com/YOUR_ORG/YOUR_REPO"

[tool.setuptools.packages.find]
where = ["lib"]
include = ["wave2a*", "wave2b*", "wave2c*"]

